--- a/OceanViewHotel/Views/Home/AsyncPage.cshtml
+++ b/OceanViewHotel/Views/Home/AsyncPage.cshtml
@@ -4,7 +4,7 @@
 <div id="divCodice">
     <form id="submitForm">
         <label class="control-label"></label>
-        <input id="inputValue" placeholder="Codice Fiscale"/>
+        <input id="inputValue" placeholder="Codice Fiscale" />
         <div class="form-group">
             <input type="submit" value="FetchByCodiceFiscale" class="btn btn-primary" />
         </div>
@@ -14,8 +14,18 @@
 </div>
 
 <script>
-    $("submitForm").submit()
-    var codiceFiscale = ("#inputValue").val();
+    $(document).ready(function () {
+        $("#submitForm").submit(function (event) {
+            event.preventDefault(); // Evita il comportamento di default del form (refresh della pagina)
+
+            var codiceFiscale = $("#inputValue").val();
+            FetchByCodiceFiscale(codiceFiscale);
+        });
+
+        // Chiamata iniziale alla funzione FetchTotalePensioniComplete
+        FetchTotalePensioniComplete();
+    });
+
     async function FetchByCodiceFiscale(codiceFiscale) {
         try {
             const response = await fetch('/Home/FetchByCodiceFiscale?codiceFiscale=' + codiceFiscale);
@@ -32,6 +42,7 @@
             console.error('Error:', error);
         }
     }
+
     async function FetchTotalePensioniComplete() {
         try {
             const response = await fetch('/Home/FetchTotalePensioniComplete');
